# Intership

./: CMakeLists.txt
Program1/: CMakeLists.txt
Program1/include/: ClientSocket.h  PragmaFirst.h  Socket.h  ThreadFirst.h  ThreadSecond.h  WorkingWithString.h
Program1/src/: Main.cpp  PragmaFirst.cpp  Socket.cpp  ThreadFirst.cpp  ThreadSecond.cpp  WorkingWithString.cpp
Program2/: CMakeLists.txt
Program2/include/: Client.h  PragmaSecond.h
Program2/src/: Client.cpp  Main.cpp  PragmaSecond.cpp
